@@ -9,7 +9,11 @@ pipeline {
     }
 
     parameters {
-        string(name: 'BROWSER', defaultValue: 'chrome', description: 'Target browser')
+        choice(description: 'Target browser', choices: ['chrome', 'firefox', 'edge'], name: 'BROWSER')
+    }
+
+    environment {
+        MAVEN_OPTS = " -Xms512m -Xmx1024m -XX:MaxPermSize=1024m"
     }
 
     options {
